--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -57,10 +57,10 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>
+<!--                     <h4>Side Widget Well</h4>
 				    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus 
 					laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-
+ -->
 			    <p class="bs-component">
 				<a href="javascript:void(0)" class="btn btn-primary">Primary</a><br>
 				<a href="javascript:void(0)" class="btn btn-success">Success</a><br>
