Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ layout: default
 {{ content }}
 </div>
 
-<div style="text-align:center">
+<!-- <div style="text-align:center">
 	<div>
 		<b>本文为原创文章，转载请注明出处：</b><a href="https://www.panxw.com">Panxw's Blog</a> » <a href="{{site.url}}{{page.url}}" title="{{page.name}}">{{ page.title }}</a>
 	</div>
@@ -65,7 +65,7 @@ layout: default
 	<div class="donate_button">
 		<a onclick="donate()">打赏</a>
 	</div>
-</div>
+</div> -->
 <hr/>
 
 <!-- next and previous -->
