Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,8 +17,7 @@ layout: default
 <div class="post_titlearea">
 	<h1>{{ page.title }}</h1>
 	<hr class="hrline"/>
-	<div class="post_titledate"/>
-		https://www.panxw.com&nbsp;&nbsp;&nbsp;
+	<div class="post_titledate">
 		栏目：<a href="{{ category_link }}">{{ category_name }}</a>&nbsp;&nbsp;&nbsp;
 		{% if page.tags.size > 0%}
 			标签：{% for tag in page.tags %}
