--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -89,6 +89,7 @@
                     {% include recent_posts.html %} 
             </div>
           </div>		  
+        </div>
       </div>
       <!-- /.row -->
 
