Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -5,7 +5,7 @@
 var gitment = new Gitment({
   id: window.location.pathname, // 可选。默认为 location.href
   owner: 'zmj1316',
-  repo: 'gitment2',
+  repo: 'gitment',
   oauth: {
     client_id: 'db40ef7cbe6ca063fec6',
     client_secret: '98603ff002c1d15d639d0708a4a80d2de41c4c4e',
