--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
 <div id="container"></div>
-<link rel="stylesheet" href="http://imsun.github.io/gitment/style/default.css">
+<link rel="stylesheet" href="comment/style/default.css">
 <script src="comment/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
