Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_includes/recent_posts.html
+++ b/_includes/recent_posts.html
@@ -1,7 +1,7 @@
               {% if page.category!='index' %}
                   {% assign latestposts = site.categories[page.category] %} 
               {% else %}
-                  {% assign latestposts = site.posts %}
+                  {% assign latestposts = paginator.posts %}
               {% endif %}
               <div class="col-lg-12">
                 <ul class="list-unstyled">
