--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 --- 
 layout: default 
 --- 
-{% assign category_name=page.category %}
+<!-- {% assign category_name=page.category %}
 {% assign category_link='/categories#' %}
-{% assign category_link=category_link | append category_name %}
+{% assign category_link=category_link | append category_name %} -->
 {% assign category_posts=site.categories[page.category] %}{% assign prevpost = nil %}{% assign nextpost = nil %}{% assign found = false %}
 {% for post in category_posts %}{% if found==true %}{% assign prevpost = post %}{% break %}{% endif %}{% if page.url==post.url %}{% assign found = true %}{% endif %}{% if found==false %}{% assign nextpost = post %}{% endif %}{% endfor %}
 {% assign category_posts=nil %}
