--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
 				 {% endfor %}
 		{% endif %}&nbsp;&nbsp;&nbsp;
 		日期：{{ page.date | date:"%Y-%m-%d" }}&nbsp;&nbsp;&nbsp;
-		<span id="busuanzi_container_page_pv">阅读：<span id="busuanzi_value_page_pv"></span></span>
+		<!-- <span id="busuanzi_container_page_pv">阅读：<span id="busuanzi_value_page_pv"></span></span> -->
 	</div>
 </div>
 
