--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,17 @@
 --- 
 layout: default 
 --- 
+
+<script type="text/javascript">
+	window.onload = function(){
+		if (window.location.hash.indexOf('#') >= 0) {
+			$('html,body').animate({
+				scrollTop: ($(window.location.hash).offset().top - 52) + "px"
+			},
+			300);
+		}; //主要修复评论定位不准确BUG
+	}
+</script> 
 <!-- Navi -->
 <div class="post_frame">
   <div class="post_navi">
