Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ layout: default
 	<a href="{{ category_link }}">{{ category_name }}</a>&nbsp;>&nbsp;
 	<span class="post_navi_span">正文</span>
 </div>
+<style>
+	h2 {line-height: 1.5; font-weight: bold;margin-bottom: 20px;padding-bottom: 10px;border-bottom: 1px solid #eee}
+</style>
 
 <!-- Title -->
 <div class="post_titlearea">
