--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 	window.onload = function(){
 		if (window.location.hash.indexOf('#') >= 0) {
 			$('html,body').animate({
-				scrollTop: ($(window.location.hash).offset().top - 52) + "px"
+				scrollTop: ($(decodeURIComponent(window.location.hash)).offset().top - 52) + "px"
 			},
 			300);
 		}; //主要修复评论定位不准确BUG
