--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,17 @@ layout: default
 			},
 			300);
 		}; //主要修复评论定位不准确BUG
+  }
+  
+  window.onhashchange = function(){
+		if (window.location.hash.indexOf('#') >= 0) {
+			$('html,body').animate({
+				scrollTop: ($(decodeURIComponent(window.location.hash)).offset().top - 52) + "px"
+			},
+			300);
+		}; //主要修复评论定位不准确BUG
 	}
+</script> 
 <!-- Navi -->
 <div class="post_frame">
   <div class="post_navi">
