--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> {% if page.title %} {{ page.title }} | {% endif %} CV</title>
+  <title> {% if page.title %} {{ page.title }} | {% endif %} Résumé</title>
   <link href="css/{{ site.style }}-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="css/{{ site.style }}-print.css" type="text/css" rel="stylesheet" media="print">
 </head>
