Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,4 +1,4 @@
-<div id="container"></div>
+<!-- <div id="container"></div>
 <link rel="stylesheet" href="comment/style/default.css">
 <script src="comment/gitment.browser.js"></script>
 <script>
@@ -12,4 +12,4 @@ var gitment = new Gitment({
   },
 })
 gitment.render('container')
-</script>
+</script> -->
