Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/css/kjhealy-print.css
+++ b/css/kjhealy-print.css
@@ -64,7 +64,8 @@ body {
 p {
 	position: relative;
 	left: 28%;
-	padding-bottom: 1.7em;
+	padding-top: 0.5em;
+	padding-bottom: 1.2em;
 	margin-right: 0;
 	width: 70%;
 }
