--- a/css/kjhealy-screen.css
+++ b/css/kjhealy-screen.css
@@ -64,7 +64,8 @@ body {
 p {
 	position: relative;
 	left: 33%;
-	margin-bottom: 0.7em;
+	padding-top: 0.5em;
+	padding-bottom: 1.2em;
 	margin-right: 0;
 	width: 65%;
 }
