--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,6 +24,13 @@
     <script src="/js/jquery-1.11.0.js"> </script>
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2631614390192656",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   
   <body>
