Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/css/kjhealy-screen.css
+++ b/css/kjhealy-screen.css
@@ -165,7 +165,7 @@ a:hover {
 	margin-top: 1em;
 	position: relative;
 	left: 33%;
-	color: #aaa;
+	color: rgb(187, 12, 12);
 	font-family: Menlo,monospace,sans-serif;
 	font-size: 80%;
 }
