Signed-off-by: Key Zhang <zmj1316@gmail.com>

--- a/css/kjhealy-print.css
+++ b/css/kjhealy-print.css
@@ -135,24 +135,31 @@ h1+p {
 }
 
 h2 {
-	font-size: 1.1em;
+	font-size: 1.2em;
 	color: #a00;
-	margin-top: 2em;
+	margin-top: 3em;
 	position: relative;
-	top: 1.2em;
+	top: 1.4em;
 	text-align: right;
-	width: 18%;
+	width: 20%;
 }
 
-
 h3 {
+	font-size: 1.1em;
+	line-height: 2em; 
+	position: relative;
+	top: 1.7em;
+	text-align: right;
+	width: 20%;
+}
+
+h4 {
 	font-size: 1em;
 	line-height: 2em; 
-	color: #ccc;
 	position: relative;
-	top: 1.6em;
+	top: 1.7em;
 	text-align: right;
-	width: 18%;
+	width: 35%;
 }
 
 a {
