--- a/css/kjhealy-screen.css
+++ b/css/kjhealy-screen.css
@@ -135,7 +135,7 @@ h1+p {
 }
 
 h2 {
-	font-size: 1.1em;
+	font-size: 1.2em;
 	color: #a00;
 	margin-top: 3em;
 	position: relative;
@@ -145,12 +145,21 @@ h2 {
 }
 
 h3 {
-	font-size: 1em;
+	font-size: 1.1em;
 	line-height: 2em; 
 	position: relative;
 	top: 1.7em;
 	text-align: right;
 	width: 20%;
+}
+
+h4 {
+	font-size: 1em;
+	line-height: 2em; 
+	position: relative;
+	top: 1.7em;
+	text-align: right;
+	width: 35%;
 }
 
 a {
