--- a/css/kjhealy-screen.css
+++ b/css/kjhealy-screen.css
@@ -156,12 +156,10 @@ h3 {
 h4 {
 	font-size: 1.1em;
 	line-height: 2.1em; 
-	top: 1.7em;
-	text-align: right;
-	width: 36%;
+	left: 33%;
 	font-weight: bold;
 	letter-spacing: 0.9px;
-
+	position: relative;
 }
 
 a {
